--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@
     font-weight: 400;
   
     color-scheme: light dark;
-    color: rgba(0, 0, 0, 0.89);
+    color: #0f0101;
     background-color: #ffffff; 
   
     text-rendering: optimizeLegibility;
